--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,20 @@
 <resources>
     <string name="app_name">HELP</string>
+
     <string name="new_post_button_description">Create new post</string>
+    <string name="save_post_button_description">Save post</string>
+    <string name="post_image_description">Post image</string>
+    <string name="pick_post_image_description">Pick post image</string>
+    <string name="post_kind_image_button_description">Kind of post</string>
+
     <string name="map_menu_item">Map</string>
     <string name="search_menu_item">Search</string>
+
     <string name="bad_tab">Bad</string>
     <string name="change_tab">Change</string>
     <string name="good_tab">Good</string>
+
+    <string name="post_title_field_hint">Title</string>
+    <string name="post_description_field_hint">Description</string>
+    <string name="post_location_field_hint">Location</string>
 </resources>
